--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.10.3",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
